--- a/hangman/hangman.cabal
+++ b/hangman/hangman.cabal
@@ -5,7 +5,7 @@ name:                hangman
 version:             0.1.0.0
 synopsis:            Playing Hangman
 -- description:         
-homepage:            Chris N Julie
+homepage:            Haskell Programming
 license:             BSD3
 license-file:        LICENSE
 author:              janaipakos
